hphp/test/zend/good/zend/bug43344_8.php.exp
HipHop Fatal error: Undefined function: \\Foo\\f in hphp/test/zend/good/zend/bug43344_8.php on line 6
