hphp/test/zend/good/zend/bug43344_8.php
<?php
namespace Foo;
function f($a=array(namespace\bar)) {
	return $a[0];
}
echo f()."\n";
?>